# scmcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/scanpy_mcp/: cli.py  server.py  util.py
src/scanpy_mcp/tool/: io.py  pl.py
src/scmcp/: server.py  util.py
src/scmcp/schema/: pl.py  util.py
src/scmcp/tool/: io.py  pl.py  pp.py  util.py
tests/: test_tl_io.py  test_tl_pl.py
