[project]
name = "scanpy-mcp"
version = "0.1.1"
description = "An MCP server for scRNA-Seq analysis software Scanpy with natural language!"
readme = "README.md"
authors = [
    { name = "shuang", email = "hsh-me@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "scanpy",
    "mcp",
    "pydantic",
    "igraph"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
scmcp = "scanpy_mcp.cli:run"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "leidenalg"
]